add: 文件列表增加键盘导航操作

--- a/pc/gui/qml/qml.qrc
+++ b/pc/gui/qml/qml.qrc
@@ -69,5 +69,7 @@
         <file>videoPlayer/icons/rotate.svg</file>
         <file>videoPlayer/UIComp/PlayRateButton.qml</file>
         <file>videoPlayer/UIComp/LoadingTips.qml</file>
+        <file>pan/FileNode.qml</file>
+        <file>comps/Modal.qml</file>
     </qresource>
 </RCC>
