--- a/pc/gui/qml/qml.qrc
+++ b/pc/gui/qml/qml.qrc
@@ -152,5 +152,7 @@
         <file>comps/IconButton.qml</file>
         <file>assets/images/icons/pause.svg</file>
         <file>assets/images/icons/start.svg</file>
+        <file>assets/images/icons/folder.svg</file>
+        <file>comps/PromiseDialog.qml</file>
     </qresource>
 </RCC>
