--- a/pc/gui/qml/qml.qrc
+++ b/pc/gui/qml/qml.qrc
@@ -144,5 +144,6 @@
         <file>comps/prompt-window.qml</file>
         <file>assets/images/icons/delete.svg</file>
         <file>assets/images/icons/order.svg</file>
+        <file>demo/main.qml</file>
     </qresource>
 </RCC>
