--- a/pc/gui/qml/qml.qrc
+++ b/pc/gui/qml/qml.qrc
@@ -155,5 +155,13 @@
         <file>assets/images/icons/folder.svg</file>
         <file>comps/PromiseDialog.qml</file>
         <file>assets/images/icons/vip.svg</file>
+        <file>widget/VirtualFrame.qml</file>
+        <file>widget/MoveWindow.qml</file>
+        <file>assets/images/icons/close.svg</file>
+        <file>assets/images/icons/max.svg</file>
+        <file>assets/images/icons/normal-size.svg</file>
+        <file>assets/images/icons/min.svg</file>
+        <file>assets/images/icons/more-down.svg</file>
+        <file>widget/Resize.qml</file>
     </qresource>
 </RCC>
