--- a/pc/gui/qml/qml.qrc
+++ b/pc/gui/qml/qml.qrc
@@ -165,5 +165,6 @@
         <file>widget/Resize.qml</file>
         <file>assets/images/icons/baidu-cloud.svg</file>
         <file>pages/setting-window.qml</file>
+        <file>pages/about-window.qml</file>
     </qresource>
 </RCC>
